<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dip" >
    
    <LinearLayout
        android:id="@+id/confirm_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingTop="20dip">
        
        <Button 
            android:id="@+id/btn_cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
        <Button 
            android:id="@+id/btn_ok"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" />
    </LinearLayout>
    
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@id/confirm_btns">
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
			<TextView
			    android:id="@+id/text_feed_title"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/feed_title" />
			
			<EditText
		        android:id="@+id/edit_feed_title"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:singleLine="true"
		        android:hint="@string/input_feed_title" />
			
			<TextView
			    android:id="@+id/text_feed_url"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/feed_url" />
				
			<EditText
			    android:id="@+id/edit_feed_url"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:singleLine="true"
			    android:inputType="textUri"
			    android:hint="@string/input_feed_url" />
		

		    <Button
		        android:id="@+id/import_from_opml"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dip"
		        android:text="@string/import_from_opml" />
	        <Button
	            android:id="@+id/export_to_opml"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/export_to_opml" />

		</LinearLayout>
		
    </ScrollView>	
    
</RelativeLayout>
